# ecucondor

./: .env.example  .gitignore  DIAGNOSTICO_CERTIFICADO_DETALLADO.md  Dockerfile  ESTADO_SISTEMA_ACTUAL.md  RESUMEN_EJECUCION.txt  RESUMEN_EJECUTIVO_ECUCONDOR.md  calculate_financials.py  consultar_iva_2025.py  docker-compose.yml  generate_ats.py  pyproject.toml  requirements.txt  respuestas_cuestionario.md  verify_ats.py
certs/: .gitkeep  README.md
docs/: ATS_GUIA.md
mcp/: __init__.py  contabilidad_server.py  sri_server.py
scripts/: EJECUCION_CLI.md  anular_facturas_duplicadas.py  apply_all_migrations.sh  apply_migrations.py  ats-mensual.sh  ats_mensual_auto.py  cli-push-migrations.sh  daemon_autofactura.py  diagnostico_certificado.py  execute_migrations_mcp.py  generar_asientos_2025.py  generar_asientos_diciembre_2024.py  generar_ats.py  generar_factura_comision.py  generar_factura_prueba.py  generar_iva.py  generar_reportes.py  importar_2025.py  importar_diciembre_2024.py  iva_febrero_2026.py  migrate_with_mcp.py  regularizar_ventas_comisiones.py  run_migration_010.py  run_migrations.py  run_migrations.sh  seed_uafe_test_data.py  seed_year_2024.py  tax-monthly-gui.sh  tax_monthly.py  test_env_debug.py  test_pydantic_settings.py  test_settings.py  verificar_estado_sri.py  verify_migrations.sql
src/: main.py
src/auth/: __init__.py  dependencies.py
src/compras/: __init__.py  liquidaciones.py
src/config/: constants.py  settings.py
src/dashboard/: __init__.py  routes.py
sri_scraper/: package-lock.json  package.json  scrape.js
tests/: conftest.py
(+118 files in other folders)
